--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ h1,
 h2 {
   font-family: 'Oswald', sans-serif;
   margin: 0;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -35,8 +36,9 @@ body {
     "main   main   main"
     "footer footer footer";
   grid-template-columns: 1fr 2.5fr 1fr;
-  grid-template-rows: 50rem 1fr;
+  grid-template-rows: 55rem 1fr;
 }
+
 
 header {
   display: contents;
@@ -66,6 +68,14 @@ header img {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
   position: relative;
+}
+
+.img-service-ban {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  position: relative;
+  height: 20rem;
+  overflow: hidden;
 }
 
 .icon header {
@@ -124,7 +134,7 @@ nav ul {
 
 nav li {
   list-style-type: none;
-  padding: 1rem;s
+  padding: 1rem;
 }
 
 nav a {
@@ -137,6 +147,8 @@ nav a {
 
 nav a:hover {
   color: #80CE2D;
+  border: 2px solid #80CE2D;
+  padding: .25rem .5rem;
 }
 
 
@@ -151,6 +163,7 @@ main {
   display: grid;
   grid-column: 2;
   grid-row: 2;
+  margin-top: 5rem;
 }
 
 .btn a {
@@ -168,7 +181,7 @@ main {
 }
 
 .btn a:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
   background-color: #000;
   color: #80CE2D;
   text-shadow: none;
