--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,6 @@ body {
   grid-template-rows: 55rem 1fr;
 }
 
-
 header {
   display: contents;
   margin: 0;
@@ -159,18 +158,18 @@ nav li {
 nav a {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 0.75rem;
+  font-size: .75rem;
   color: #000;
+  border: 2px solid #fff;
   font-weight: bold;
   padding: .25rem .5rem;
 }
 
 nav a:hover {
-  color: #80ce2d;
-  border: 2px solid #80ce2d;
+  color: #388505;
+  border: 2px solid #388505;
   padding: .25rem .5rem;
 }
-
 
 header nav {
   grid-column: 3;
@@ -187,7 +186,6 @@ main {
 
 .btn a {
   background-color: #388505;
-  border: 2px solid #80ce2d;
   color: white;
   text-shadow: 1px 1px 2px #000;
   padding: 10px 27px;
@@ -201,7 +199,7 @@ main {
 }
 
 .btn a:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
   background-color: #000;
   color: #80ce2d;
   text-shadow: none;
