--- a/css/main.css
+++ b/css/main.css
@@ -36,17 +36,10 @@ h2 {
 
 h2 {
   padding-top: 2rem;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 @media only screen and (min-width: 25em) {
-}
-
-@media only screen and (min-width: 38em) {
-}
-
-@media only screen and (min-width: 60em) {
-
   body {
     margin: 0;
     display: grid;
@@ -314,6 +307,539 @@ h2 {
   .social li {
     list-style-type: none;
     padding: .5rem;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+  body {
+    margin: 0;
+    display: grid;
+    grid-template-areas:
+      "header header header"
+      "main   main   main"
+      "footer footer footer";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 55rem 1fr 2rem;
+  }
+
+  header {
+    display: contents;
+    margin: 0;
+  }
+
+  header img {
+    position: relative;
+    margin: 0;
+  }
+
+  .nav-home {
+    background-color: white;
+    grid-column: 1 / span 3;
+    grid-row: 1 / -1;
+    z-index: 1;
+    height: 125px;
+    padding: 0 3rem;
+    display: flex;
+  }
+
+  .banner {
+    display: grid;
+    grid-area: header;
+  }
+
+  .img-banner {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    position: relative;
+    height: 50rem;
+  }
+
+  .img-service-ban {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    position: relative;
+    height: 20rem;
+    overflow: hidden;
+  }
+
+  .icon header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .banner-content {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    position: absolute;
+    left: 8%;
+    bottom: 30%;
+  }
+
+  .banner-content h1 {
+    font-size: 5.75rem;
+    color: #80ce2d;
+    text-shadow: 1px 1px 4px #000;
+    margin: 0;
+  }
+
+  .banner-content p {
+    font-size: 1.75rem;
+    line-height: .5;
+    color: #fff;
+    text-shadow: 1px 1px 2px #000;
+  }
+
+  .banner-service {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    position: absolute;
+    top: 24.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .banner-service h1 {
+    font-size: 5.75rem;
+    color: #80ce2d;
+    text-shadow: 1px 1px 4px #000;
+    margin: 0;
+  }
+
+  .btn {
+    padding-top: 4rem;
+  }
+
+  .banner-content a {
+    background-color: #80ce2d;
+    border: none;
+    color: white;
+    text-shadow: 1px 1px 2px #000;
+    padding: 10px 27px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.25rem;
+  }
+
+  .banner-content a:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+  }
+
+  nav ul {
+    display: flex;
+    margin: 0;
+    padding-top: 2.75rem;
+  }
+
+  nav li {
+    list-style-type: none;
+    padding: 1rem;
+  }
+
+  nav a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .75rem;
+    color: #000;
+    border: 2px solid #fff;
+    font-weight: bold;
+    padding: .25rem .5rem;
+  }
+
+  nav a:hover {
+    color: #388505;
+    border: 2px solid #388505;
+    padding: .25rem .5rem;
+  }
+
+  header nav {
+    grid-column: 3;
+    grid-row: 1;
+    z-index: 1;
+  }
+
+  main {
+    grid-area: main;
+    display: grid;
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .about-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .about-pic {
+    display: inline-block;
+    width: 35rem;
+    margin-left: 2.5rem;
+    object-fit: cover;
+    overflow: hidden;
+    box-shadow: 0 5px 9px 0 rgba(0, 0, 0, .4);
+  }
+
+  .about {
+    display: inline-block;
+    width: 60%;
+  }
+
+  .btn a {
+    background-color: #388505;
+    color: white;
+    text-shadow: 1px 1px 2px #000;
+    padding: 10px 27px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.25rem;
+    font-weight: bold;
+    border-radius: 3px;
+  }
+
+  .btn a:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+    background-color: #000;
+    color: #80ce2d;
+    text-shadow: none;
+  }
+
+  .resume {
+    display: flex;
+    font-size: .9rem;
+    justify-content: space-between;
+    margin-top: 2rem;
+  }
+
+  .resume p {
+    font-size: .75rem;
+  }
+
+  .resume li {
+    font-size: .75rem;
+  }
+
+  .resume ul {
+    padding-left: 1rem;
+  }
+
+  .resume div {
+    align-content: center;
+    align-items: center;
+  }
+
+  .cert,
+  .prof,
+  .athl {
+    padding: 0 1rem 1rem 1.5rem;
+  }
+
+  h3 {
+    border-bottom: 2px solid #80ce2d;
+    margin-right: .5rem;
+  }
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .3);
+    transition: .3s;
+    width: 18rem;
+  }
+
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .4);
+  }
+
+  .container {
+    padding: 16px;
+  }
+
+  footer {
+    grid-column: 1 / span 3;
+    background-color: #388505;
+    margin: 5rem 0 0;
+    padding: 2rem 0;
+    color: #fff;
+  }
+
+  footer p {
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .social ul {
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
+    padding: 0;
+  }
+
+  .social li {
+    list-style-type: none;
+    padding: .5rem;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+  body {
+    margin: 0;
+    display: grid;
+    grid-template-areas:
+      "header header header"
+      "main   main   main"
+      "footer footer footer";
+    grid-template-columns: .3fr 2.5fr .3fr;
+    grid-template-rows: 45rem 1fr 2rem;
+  }
+
+  header {
+    display: contents;
+    margin: 0;
+  }
+
+  header img {
+    position: relative;
+    margin: 0;
+  }
+
+  .nav-home {
+    background-color: white;
+    grid-column: 1 / span 3;
+    grid-row: 1 / -1;
+    z-index: 1;
+    height: 125px;
+    padding: 0 3rem;
+    display: flex;
+  }
+
+  .banner {
+    display: grid;
+    grid-area: header;
+  }
+
+  .img-banner {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    position: relative;
+    height: 40rem;
+  }
+
+  .img-service-ban {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    position: relative;
+    height: 20rem;
+    overflow: hidden;
+  }
+
+  .icon header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .banner-content {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    position: absolute;
+    left: 8%;
+    bottom: 35%;
+  }
+
+  .banner-content h1 {
+    font-size: 5rem;
+    color: #80ce2d;
+    text-shadow: 1px 1px 4px #000;
+    margin: 0;
+  }
+
+  .banner-content p {
+    font-size: 1.75rem;
+    line-height: .5;
+    color: #fff;
+    text-shadow: 1px 1px 2px #000;
+  }
+
+  .banner-service {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    position: absolute;
+    top: 24.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .banner-service h1 {
+    font-size: 5.75rem;
+    color: #80ce2d;
+    text-shadow: 1px 1px 4px #000;
+    margin: 0;
+  }
+
+  .btn {
+    padding-top: 4rem;
+  }
+
+  .banner-content a {
+    background-color: #80ce2d;
+    border: none;
+    color: white;
+    text-shadow: 1px 1px 2px #000;
+    padding: 10px 27px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.25rem;
+  }
+
+  .banner-content a:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+  }
+
+  nav ul {
+    display: flex;
+    margin: 0;
+    padding-top: 2.75rem;
+  }
+
+  nav li {
+    list-style-type: none;
+    padding: 1rem;
+  }
+
+  nav a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .75rem;
+    color: #000;
+    border: 2px solid #fff;
+    font-weight: bold;
+    padding: .25rem .5rem;
+  }
+
+  nav a:hover {
+    color: #388505;
+    border: 2px solid #388505;
+    padding: .25rem .5rem;
+  }
+
+  header nav {
+    grid-column: 3;
+    grid-row: 1;
+    z-index: 1;
+  }
+
+  main {
+    grid-area: main;
+    display: grid;
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .about-container {
+    align-items: center;
+  }
+
+  .about-pic {
+    width: 30rem;
+    margin-left: 2.5rem;
+    object-fit: cover;
+    overflow: hidden;
+    box-shadow: 0 5px 9px 0 rgba(0, 0, 0, .4);
+  }
+
+  .btn a {
+    background-color: #388505;
+    color: white;
+    text-shadow: 1px 1px 2px #000;
+    padding: 10px 27px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.25rem;
+    font-weight: bold;
+    border-radius: 3px;
+  }
+
+  .btn a:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+    background-color: #000;
+    color: #80ce2d;
+    text-shadow: none;
+  }
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .3);
+    transition: .3s;
+    width: 16rem;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+  body {
+    grid-template-columns: 1fr 2.5fr 1fr;
+    grid-template-rows: 55rem 1fr 2rem;
+  }
+
+  .img-banner {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    position: relative;
+    height: 50rem;
+  }
+
+  .img-service-ban {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    position: relative;
+    height: 20rem;
+    overflow: hidden;
+  }
+
+  .icon header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .banner-content {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    position: absolute;
+    left: 8%;
+    bottom: 30%;
+  }
+
+  .banner-content h1 {
+    font-size: 5.75rem;
+  }
+
+  .banner-service {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    position: absolute;
+    top: 24.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .banner-service h1 {
+    font-size: 5.75rem;
+  }
+
+  .about-pic {
+    display: inline-block;
+    width: 35rem;
+  }
+
+  .card {
+    width: 18rem;
   }
 
 }
